--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <div class="eye-lid right"></div>
                 <div class="iris right"></div>
             </div>
+            <div class="blush left"></div>
+            <div class="blush right"></div>
         </div>
         <div class="penguin-body"></div>
     </div>
