working on the shirt

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="back-mountain"></div>
     <div class="sun"></div>
     <div class="penguin">
+        <!-- HEAD -->
         <div class="penguin-head">
             <div class="face left"></div>
             <div class="face right"></div>
@@ -29,6 +30,11 @@
             <div class="blush right"></div>
             <div class="beak top"></div>
             <div class="beak bottom"></div>
+        </div>
+        <!-- BODY -->
+        <div class="shirt">
+            <div>💕</div>
+            <p>I CSS</p>
         </div>
         <div class="penguin-body"></div>
     </div>
